--- a/templates/dashboard/styleguide/index.html
+++ b/templates/dashboard/styleguide/index.html
@@ -1289,7 +1289,7 @@
                     <li class="collection-item list-item">
                       <a class="list-item-name" href="#" contenteditable="true">
                         <p class="list-item-name--single">
-                          Accessories
+                          Sellos de Seguridad
                         </p>
                       </a>
                     </li>
@@ -1326,7 +1326,7 @@
                     </li>
                     <li class="collection-item list-item">
                       <a class="list-item-name" href="#" contenteditable="true">
-                        Accessories
+                        Sellos de Seguridad
                         <p class="list-item-desc">
                           <span>
                             Consequuntur ducimus laborum qui ea mollitia. Illum cum itaque consequuntur temporibus officia dolore. Atque sed aspernatur eligendi.
