--- a/templates/dashboard/styleguide/index.html
+++ b/templates/dashboard/styleguide/index.html
@@ -1282,7 +1282,7 @@
                     <li class="collection-item list-item">
                       <a class="list-item-name" href="#" contenteditable="true">
                         <p class="list-item-name--single">
-                          Groceries
+                          Etiquetas
                         </p>
                       </a>
                     </li>
@@ -1296,7 +1296,7 @@
                     <li class="collection-item list-item">
                       <a class="list-item-name" href="#" contenteditable="true">
                         <p class="list-item-name--single">
-                          Apparel
+                          Equipo
                         </p>
                       </a>
                     </li>
@@ -1316,7 +1316,8 @@
                   <ul class="collection list">
                     <li class="collection-item list-item">
                       <a class="list-item-name" href="#" contenteditable="true">
-                        Groceries
+                        Etiquetas
+
                         <p class="list-item-desc">
                           <span>
                             Autem porro rem rem. Laudantium iure ipsam voluptates repellendus nulla esse blanditiis. Facere rerum occaecati adipisci porro quasi quibusdam. asdas as das das das das das
@@ -1336,7 +1337,7 @@
                     </li>
                     <li class="collection-item list-item">
                       <a class="list-item-name" href="#" contenteditable="true">
-                        Apparel
+                        Equipo
                         <p class="list-item-desc">
                           <span>
                             Consequuntur officia enim est. Cum esse accusantium blanditiis quae modi inventore. Quia iusto veniam sed perferendis.
