--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
             <div class="navbar__brand__checkout float-right">
               <a rel="nofollow" class="checkout__icon" href="{% url "checkout:index" %}">
                 <span class="checkout-label d-none d-md-inline-block">
-                  {% trans "Your Checkout" context "Main navigation item" %}
+                  {% trans "Your Cart" context "Main navigation item" %}
                 </span>
                 <div class="navbar__brand__checkout__icon">
                   <svg data-src="{% static "images/checkout.svg" %}" width="24" height="24"/>
@@ -205,7 +205,7 @@
             <hr />
             <li>
               <a rel="nofollow" href="{% url "checkout:index" %}">
-                {% trans "Your Checkout" context "Main navigation item" %}
+                {% trans "Your Cart" context "Main navigation item" %}
               </a>
             </li>
             {% if user.is_authenticated %}
@@ -278,7 +278,7 @@
             <svg data-src="{% static "images/logo-light.svg" %}"/>
           </a>
         </div>
-        <div class="col-8 footer__copy-text">COPYRIGHT © 2009–2019 MIRUMEE SOFTWARE</div>
+        <div class="col-8 footer__copy-text">COPYRIGHT © 2009–2019 BRINGALL S.A de C.V</div>
       </div>
     </div>
   </div>
