--- a/templates/checkout_dropdown.html
+++ b/templates/checkout_dropdown.html
@@ -59,12 +59,12 @@
     </div>
   {% else %}
     <div class="text-md-center checkout-preview-dropdown__empty">
-      <h3>{% trans "There are no products in your shopping checkout." context "Empty checkout message" %}</h3>
+      <h3>{% trans "There are no products in your shopping cart." context "Empty cart message" %}</h3>
       <img data-src="{% static 'images/empty-checkout-bg.png' %}"
            data-srcset="{% static 'images/empty-checkout-bg.png' %} 1x, {% static 'images/empty-checkout-bg2x.png' %} 2x"
            src="{% placeholder size=255 %}"
            class="lazyload lazypreload">
-      <a href="{% url 'home' %}" class="btn btn-primary">{% trans "Check out our sales" context "Empty checkout link" %}</a>
+      <a href="{% url 'home' %}" class="btn btn-primary">{% trans "Check out our sales" context "Empty cart link" %}</a>
     </div>
   {% endif %}
 </div>
