--- a/saleor/static/scss/components/_checkout-dropdown.scss
+++ b/saleor/static/scss/components/_checkout-dropdown.scss
@@ -74,6 +74,8 @@
   &__empty {
     img {
       margin: $global-margin 0;
+      width: 25%;
+      height: 25%;
     }
   }
   @include media-breakpoint-up(md) {
