--- a/templates/checkout_dropdown.html
+++ b/templates/checkout_dropdown.html
@@ -63,7 +63,7 @@
       <img data-src="{% static 'images/empty-checkout-bg.png' %}"
            data-srcset="{% static 'images/empty-checkout-bg.png' %} 1x, {% static 'images/empty-checkout-bg2x.png' %} 2x"
            src="{% placeholder size=255 %}"
-           class="lazyload lazypreload">
+           class="lazyload lazypreload cart-checkout-icon">
       <a href="{% url 'home' %}" class="btn btn-primary">{% trans "Check out our sales" context "Empty cart link" %}</a>
     </div>
   {% endif %}
