--- a/saleor/static/dashboard/scss/components/_nav.scss
+++ b/saleor/static/dashboard/scss/components/_nav.scss
@@ -60,7 +60,7 @@ header {
 
     .logo {
       padding: 0;
-      svg {
+      svg, img {
         max-height: $navbar-height;
         max-width: 80px;
         width: auto;
