Remove unneeded files & updated tests

--- a/templates/dashboard/styleguide/index.html
+++ b/templates/dashboard/styleguide/index.html
@@ -378,7 +378,7 @@
                         Currency <svg data-src="{% static "dashboard/images/edit.svg" %}" width="24px" height="24px" />
                       </h4>
                       <code>&lt;span class=&quot;currency&quot;&gt;&lt;/span&gt;</code>
-                      <span class="currency" contenteditable="true">USD</span>
+                      <span class="currency" contenteditable="true">MXN</span>
                     </div>
                     <div class="section">
                       <h4>
@@ -658,7 +658,7 @@
                           </label>
                           <div class="input-with-suffix">
                             <input class=" validate" id="id_price" name="price" step="any" type="number" required="">
-                            <div class="input-text-suffix" contenteditable="true">USD</div>
+                            <div class="input-text-suffix" contenteditable="true">MXN</div>
                           </div>
                         </div>
                       </form>
@@ -989,7 +989,7 @@
                               </td>
                               <td class="right-align" contenteditable="true">
                                 299,06&nbsp;
-                                <span class="currency">USD</span>
+                                <span class="currency">MXN</span>
                               </td>
                             </tr>
                             <tr>
@@ -1014,7 +1014,7 @@
                               </td>
                               <td class="right-align" contenteditable="true">
                                 299,06&nbsp;
-                                <span class="currency">USD</span>
+                                <span class="currency">MXN</span>
                               </td>
                             </tr>
                         </tbody>
@@ -1078,7 +1078,7 @@
                               </td>
                               <td class="right-align" contenteditable="true">
                                 299,06&nbsp;
-                                <span class="currency">USD</span>
+                                <span class="currency">MXN</span>
                               </td>
                             </tr>
                             <tr>
@@ -1103,7 +1103,7 @@
                               </td>
                               <td class="right-align" contenteditable="true">
                                 299,06&nbsp;
-                                <span class="currency">USD</span>
+                                <span class="currency">MXN</span>
                               </td>
                             </tr>
                         </tbody>
@@ -1162,7 +1162,7 @@
                                 <td>
                                 </td>
                                 <td class="right-align" contenteditable="true">
-                                  124,91&nbsp;<span class="currency">USD</span>
+                                  124,91&nbsp;<span class="currency">MXN</span>
                                 </td>
                               </tr>
                               <tr>
@@ -1179,7 +1179,7 @@
                                 <td>
                                 </td>
                                 <td class="right-align" contenteditable="true">
-                                  54,91&nbsp;<span class="currency">USD</span>
+                                  54,91&nbsp;<span class="currency">MXN</span>
                                 </td>
                               </tr>
                               <tr>
@@ -1196,7 +1196,7 @@
                                 <td>
                                 </td>
                                 <td class="right-align" contenteditable="true">
-                                  34,91&nbsp;<span class="currency">USD</span>
+                                  34,91&nbsp;<span class="currency">MXN</span>
                                 </td>
                               </tr>
                               <tr>
@@ -1213,7 +1213,7 @@
                                 <td>
                                 </td>
                                 <td class="right-align" contenteditable="true">
-                                  24,91&nbsp;<span class="currency">USD</span>
+                                  24,91&nbsp;<span class="currency">MXN</span>
                                 </td>
                               </tr>
                             </tbody>
@@ -1319,7 +1319,7 @@
                         Groceries
                         <p class="list-item-desc">
                           <span>
-                            Autem porro rem rem. Laudantium iure ipsam voluptates repellendus nulla esse blanditiis. Facere rerum occaecati adipisci porro quasi quibusdam. asdas as das das das das das
+                            Autem porro rem rem. Laudantium iure ipsam voluptates repellendus nulla esse blanditiis. Facere rerum occaecati adipisci porro quasi quibMXNam. asdas as das das das das das
                           </span>
                         </p>
                       </a>
@@ -1370,7 +1370,7 @@
                           Miller-Hill
                         </span>
                         <p class="list-item-price">
-                          31,40&nbsp<span class="currency">USD</span>
+                          31,40&nbsp<span class="currency">MXN</span>
                         </p>
                       </a>
                     </li>
@@ -1383,7 +1383,7 @@
                           Schmidt and Sons
                         </span>
                         <p class="list-item-price">
-                          11,40&nbsp<span class="currency">USD</span>
+                          11,40&nbsp<span class="currency">MXN</span>
                         </p>
                       </a>
                     </li>
@@ -1396,7 +1396,7 @@
                           Ramirez PLC
                         </span>
                         <p class="list-item-price">
-                          25,40&nbsp<span class="currency">USD</span>
+                          25,40&nbsp<span class="currency">MXN</span>
                         </p>
                       </a>
                     </li>
@@ -1409,7 +1409,7 @@
                           Foster-Brown
                         </span>
                         <p class="list-item-price">
-                          66,40&nbsp<span class="currency">USD</span>
+                          66,40&nbsp<span class="currency">MXN</span>
                         </p>
                       </a>
                     </li>
